# dotfiles

./: .gitignore  README.md  init.lua  lazy-lock.json  lazyvim.json  okularrc
github-copilot/: versions.json
lua/: current-theme.lua
lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
lua/functions/: init.lua
lua/lang/: clangd-extensions.lua  init.lua  markdown.lua  zig.lua
lua/lsp/: cmp.lua  copilot.lua  handlers.lua  init.lua
lua/plugins/: bqf.lua  bufferline.lua  chatGPT.lua  cmp.lua  colorscheme.lua  conform.lua  copilot.lua  dadbod.lua  dap.lua  dashboard.lua  diffview.lua  editor.lua  fugitive.lua  fzf.lua  garbage-day.lua  git-conflict.lua  gp.lua  init.lua  kanagawa.lua  kulala.lua  lazygit.lua  leap.lua  leetcode.lua  lsp.lua  lspsaga.lua  lualine.lua  mason.lua  navic.lua  neocodeium.lua  neotest.lua  noice.lua  none-ls.lua  notify.lua  nvim-lint.lua  nvim-recorder.lua  octo.lua  package-info.lua  pairs.lua  perfanno.lua  projects.lua  (+13 more)
lua/utils/: fn.lua  ts-node-action.lua  utils.lua
nvim/: README.md  init.lua  lazy-lock.json
nvim/lua/: highlight.lua
nvim/spell/: en.utf-8.add  en.utf-8.add.spl
nvim/tests/: hello_py.ipynb  hello_py.md
nvim/tests/hello_cpp/: CMakeLists.txt
nvim/tests/hello_cpp/.cache/clangd/index/: circle.cpp.E302D325DC512A2F.idx  circle.h.4391A663E294D644.idx  main.cpp.1D1D2316A7F08B5A.idx  main.h.65A79A3B35A0D5B3.idx
picom/: picom.conf
schemas/: protolint.json
snippets/: vue.snippets
spell/: en.utf-8.add  en.utf-8.add.spl
tests/hello_cpp/: circle.cpp  (+2 more)
tmux/: tmux.conf
wezterm/: wezterm.lua
(+169 files in other folders)
